@@ -317,6 +317,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29960: Preserve generator state when _random.Random.setstate()
+  raises an exception.  Patch by Bryan Olson.
+
 - bpo-29802: Fixed reference counting in module-level struct functions when
   pass arguments of wrong type.
 
